Fixed scrollbar in FF

--- a/src/styles/_context.scss
+++ b/src/styles/_context.scss
@@ -14,7 +14,7 @@
 
 	&--scrollable {
 		height: calc(100% - 6px * 2);
-		overflow-y: scroll;
+		overflow-y: auto;
 	}
 
 	/* Item ------------------------------------------------*/
